# duckdb-raster

./: CHANGES.rst  CMakeLists.txt  Makefile  README.md  extension_config.cmake  generate_function_reference.py  vcpkg.json
.github/workflows/: MainDistributionPipeline.yml
docs/: examples.md  functions.md
src/: raster_extension.cpp
src/include/: raster_extension.hpp
src/raster/: CMakeLists.txt  data_cube.cpp  data_cube.hpp  data_format_utils.cpp  data_format_utils.hpp  data_types.cpp  data_types.hpp  filter_eval.cpp  filter_eval.hpp  gdal_module.cpp  raster_array_functions.cpp  raster_casts.cpp  raster_casts.hpp  raster_drivers_function.cpp  raster_math_functions.cpp  raster_read_function.cpp  raster_spatial_functions.cpp  raster_table_functions.cpp  raster_table_functions.hpp  raster_types.cpp  raster_types.hpp  raster_utils.cpp  raster_utils.hpp  raster_write_function.cpp  raster_write_function.hpp
src/raster/modules/: gdal_file_system.hpp  gdal_module.cpp  gdal_module.hpp
src/raster/scalar/: CMakeLists.txt  raster_array_functions.cpp  raster_array_functions.hpp  raster_format_functions.cpp  raster_format_functions.hpp  raster_math_functions.cpp  raster_math_functions.hpp  raster_spatial_functions.cpp  raster_spatial_functions.hpp  raster_stats_functions.cpp  raster_stats_functions.hpp  raster_values_functions.cpp  raster_values_functions.hpp
src/raster/table/: CMakeLists.txt  raster_drivers_function.cpp  raster_drivers_function.hpp  raster_read_function.cpp  raster_read_function.hpp  raster_write_function.cpp
test/data/: CATAST_Pol_Township-PNA.geojson  overlay-sample.tiff  overlay-sample.tiff.aux.xml
test/data/mosaic/: SCL.tif-land-clip00.tiff.aux.xml  SCL.tif-land-clip01.tiff.aux.xml  SCL.tif-land-clip10.tiff.aux.xml  SCL.tif-land-clip11.tiff.aux.xml  SCL.tif-land.vrt
test/sql/: raster.test  rt_aggregates.test  rt_array.test  rt_compression.test  rt_drivers.test  rt_file_system.test  rt_math.test  rt_pixel_values.test  rt_read.test  rt_read_cells.test  rt_read_multi.test  rt_spatial.test  rt_stats.test  rt_write.test
